--- a/course-choice-frontend/package.json
+++ b/course-choice-frontend/package.json
@@ -7,10 +7,11 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^9.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "react-select": "^5.2.1",
     "web-vitals": "^2.1.2"
