Added icons, updated firebase.json

--- a/course-choice-frontend/public/manifest.json
+++ b/course-choice-frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "SHS Course Choice",
+  "name": "SHS Course Choice Forms",
   "icons": [
     {
       "src": "favicon.ico",
