--- a/course-choice-frontend/.env
+++ b/course-choice-frontend/.env
@@ -1,1 +1,8 @@
 REACT_APP_API_URL=https://script.google.com/macros/s/AKfycbzrfgsAHKN2BDUXjpBfqS-AOuildAiEi2mlh4msOnLbjuz8_1ykETLhwIyd6mE4moqrYQ/exec
+REACT_APP_GOOGLE_DOMAIN=stirlingschools.net
+REACT_APP_FIREBASE_API_KEY=AIzaSyCQ9cLex-z8woLW1cwt-5s0mIwZ67KXWcs
+REACT_APP_FIREBASE_AUTH_DOMAIN=shs-course-choice-auth-2021.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=shs-course-choice-auth-2021
+REACT_APP_FIREBASE_STORAGE_BUCKET=shs-course-choice-auth-2021.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=810594559995
+REACT_APP_FIREBASE_APP_ID=1:810594559995:web:8d5c63ddb167f496180d5e
