--- a/course-choice-frontend/package.json
+++ b/course-choice-frontend/package.json
@@ -7,13 +7,16 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.24.0",
     "firebase": "^9.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
+    "react-linkify": "^1.0.0-alpha",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "react-select": "^5.2.1",
+    "react-toastify": "^8.1.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
